[package]
name = "jugalbandi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sp1-core = { git = "https://github.com/succinctlabs/sp1.git" }
actix-web = "4"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0"
miden-wasm = { git = "https://github.com/sausaging/miden-examples.git" }
log = "0.4.21"
env_logger = "0.11.3"
bincode = "1.3.3"
risc0-zkvm = "0.20.1"
thiserror = "1.0.57"
lazy_static = "1.4.0"
tokio = "1.36.0"
reqwest = { version = "0.12.1", features = ["blocking", "json"] }